// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WalletAccount.vue should be rendered correctly 1`] = `
<s-card-stub
  borderradius="medium"
  class="wallet-account"
  shadow="always"
  size="small"
  status="default"
  usedesignsystem="true"
>
  <div
    class="account s-flex"
  >
    <wallet-avatar-stub
      address="cnRXua6zs8TaE87BQFL6uWVbT2g6GXsUjwk6PTvL6UHcHDCvo"
      class="account-avatar"
      size="28"
      theme="polkadot"
    />
     
    <div
      class="account-details s-flex"
    >
      <div
        class="account-credentials s-flex"
      >
        <div
          class="account-credentials_name"
        >
          Polkadot Name
        </div>
         
        <s-tooltip-stub
          animation="el-fade-in-linear"
          borderradius="small"
          closedelay="0"
          content="Copy address"
          hideafter="0"
          offset="0"
          opendelay="1000"
          placement="top"
          showarrow="true"
          tabindex="0"
          theme="auto"
          usedesignsystem="true"
        >
          <div
            class="account-credentials_address"
          >
            cnRXua6zs8Ta...TvL6UHcHDCvo
          </div>
        </s-tooltip-stub>
      </div>
       
      <s-button-stub
        alternative="true"
        borderradius="small"
        class="account__action-button account-switch"
        icon=""
        iconposition="left"
        nativetype="button"
        rounded="true"
        size="medium"
        tabindex="0"
        tooltip="Switch account"
        tooltipplacement="top"
        type="action"
        usedesignsystem="true"
      >
        <s-icon-stub
          name="arrows-refresh-ccw-24"
          size="28"
        />
      </s-button-stub>
    </div>
  </div>
</s-card-stub>
`;

exports[`WalletAccount.vue should not render account switch button while false 1`] = `
<s-card-stub
  borderradius="medium"
  class="wallet-account"
  shadow="always"
  size="small"
  status="default"
  usedesignsystem="true"
>
  <div
    class="account s-flex"
  >
    <wallet-avatar-stub
      address="cnRXua6zs8TaE87BQFL6uWVbT2g6GXsUjwk6PTvL6UHcHDCvo"
      class="account-avatar"
      size="28"
      theme="polkadot"
    />
     
    <div
      class="account-details s-flex"
    >
      <div
        class="account-credentials s-flex"
      >
        <div
          class="account-credentials_name"
        >
          Polkadot Name
        </div>
         
        <s-tooltip-stub
          animation="el-fade-in-linear"
          borderradius="small"
          closedelay="0"
          content="Copy address"
          hideafter="0"
          offset="0"
          opendelay="1000"
          placement="top"
          showarrow="true"
          tabindex="0"
          theme="auto"
          usedesignsystem="true"
        >
          <div
            class="account-credentials_address"
          >
            cnRXua6zs8Ta...TvL6UHcHDCvo
          </div>
        </s-tooltip-stub>
      </div>
       
      <!---->
    </div>
  </div>
</s-card-stub>
`;
